Fix execution of most tests