@@ -210,7 +210,7 @@ under the License.
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>-Duser.language=en</argLine>
+                            <argLine>-Duser.language=en --add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>${project.build.directory}/dependency/beanvalidation-tck-tests-suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
